tests/config_module_name_rewrite_haste/config_module_name_rewrite_haste.exp
Error --------------------------------------------------------------- A.js:12:18

Error: A.js:12
 12: var m2 = require('2DoesntExist'); // Error
                      ^^^^^^^^^^^^^^ Cannot resolve module `Exists3`.

Error --------------------------------------------------------------- A.js:13:33

Error: A.js:13
 13: import {numVal as numVal2} from '3DoesntExist'; // Error
                                     ^^^^^^^^^^^^^^ Cannot resolve module `Exists4`.


Found 2 errors
